--- a/Chapter_1_bill_sampras_summer_job_decision.Rmd
+++ b/Chapter_1_bill_sampras_summer_job_decision.Rmd
@@ -48,7 +48,9 @@ We are tackling a decision analysis problem to determine the best summer employm
 **What is the goal of the analysis?**
 <br>
 
-The goal is to construct and analyze a decision tree that represents Bill's summer job options to help him make an informed choice based on his preference for a higher summer salary. The decision tree will systematically represent and evaluate the sequence of decisions and uncertainties Bill faces, guiding him to a decision that maximizes his salary expectations. <br>
+The goal is to construct and analyze a decision tree that represents Bill's summer job options to help him make an informed choice based on his preference for a higher summer salary. The decision tree will systematically represent and evaluate the sequence of decisions and uncertainties Bill faces, guiding him to a decision that maximizes his salary expectations. 
+<br><br>
+
 For detailed Case Story and Analysis, please click the link below. <br><br><br><br>
 
 ### [*Click to view the analysis*](https://business-analytics-slee.shinyapps.io/Chapter_1_bill_sampras_summer_job_decision/)
