--- a/Chapter_1_bill_sampras_summer_job_decision.Rmd
+++ b/Chapter_1_bill_sampras_summer_job_decision.Rmd
@@ -4,7 +4,7 @@ output:
   html_document:
   css: styles.css
 ---
-  
+
 ```{css, echo=FALSE}
 body {
   font-family: 'Verdana', sans-serif;
@@ -31,35 +31,35 @@ font-size: 0.9em;
 
 ```
 
+------------------------------------------------------------------------
 
------------------------------------------------------------------------
+------------------------------------------------------------------------
 
------------------------------------------------------------------------
-  
-## **Take a quick glance of this case study and analysis.**
+![](Photo/bill_sampras_summar_job_decision.jpg)
 
 <br>
 
+## **Take a quick glance of this case study and analysis.**
+
+<br>
 
 **What kind of problem are we solving, what is the story?** <br>
 
 We are tackling a decision analysis problem to determine the best summer employment option for Bill Sampras, a student at Sloan School of Management at MIT. The story unfolds as Bill must decide between accepting a guaranteed but possibly less lucrative summer job offer from his former boss, John Mason, or waiting for a potentially better offer from Vanessa Parker of an investment banking firm, with the risk of ending up having to search for another job through his school's recruiting program. <br>
 
-**What is the goal of the analysis?**
-<br>
+**What is the goal of the analysis?** <br>
 
-The goal is to construct and analyze a decision tree that represents Bill's summer job options to help him make an informed choice based on his preference for a higher summer salary. The decision tree will systematically represent and evaluate the sequence of decisions and uncertainties Bill faces, guiding him to a decision that maximizes his salary expectations. 
-<br><br>
+The goal is to construct and analyze a decision tree that represents Bill's summer job options to help him make an informed choice based on his preference for a higher summer salary. The decision tree will systematically represent and evaluate the sequence of decisions and uncertainties Bill faces, guiding him to a decision that maximizes his salary expectations. <br><br>
 
 For detailed Case Story and Analysis, please click the link below. <br><br><br><br>
 
 ### [*Click to view the analysis*](https://business-analytics-slee.shinyapps.io/Chapter_1_bill_sampras_summer_job_decision/)
 
------------------------------------------------------------------------
+<br>
 
------------------------------------------------------------------------
+------------------------------------------------------------------------
 
-
+------------------------------------------------------------------------
 
 ::: {#footer}
 ```{r echo=FALSE, results='asis'}
